--- a/TheGymWebsite/Views/_ViewImports.cshtml
+++ b/TheGymWebsite/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using TheGymWebsite
 @using TheGymWebsite.Models
+@*@using TheGymWebsite.ViewModels*@
+@using Microsoft.AspNetCore.Identity
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
